Fixed height issue on hit dice where image would get cut off.

--- a/charactersheet/site.css
+++ b/charactersheet/site.css
@@ -125,20 +125,20 @@ div.hr {
   padding-top:10px;
 }
 
-.heart-full {
+.dice-full {
   cursor:pointer;
   background: url('/images/d20-blue-20x20.png');
   width:20px;
-  height:20px;
+  height:23px;
   display: inline-block;
   padding: 0 0 0 0px;
 }
 
-.heart-empty {
+.dice-empty {
   cursor:pointer;
   background: url('/images/d20-grey20x20.png');
   width:20px;
-  height:20px;
+  height:23px;
   display: inline-block;
   padding: 0 0 0 0px;
 }
